--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <h2>Der Atlantik</h2>
     <p>Der Atlantische Ozean, auch <em>Atlantik</em> genannt, ist nach dem Pazifik der zweitgrößte Ozean der Erde. Als Grenzen gelten die Polarkreise und die Meridiane durch Kap Agulhas im Osten und Kap Hoorn im Westen.</p>
-   
+    <img class="pic" src="https://www.goruma.de/sites/default/files/styles/list_medium/public/images/import/bilder/content/m/marokko_gibraltar.jpg?itok=_7fmV-bD" alt="Eine Insel im Atlantik">
+    
     <h2>Der Pazifik</h2>
     <p>Der Pazifische Ozean, auch <em>Pazifik</em>, Stiller Ozean oder Großer Ozean genannt, ist der größte und tiefste Ozean der Erde und grenzt an alle anderen Ozeane.</p>
     <aside>Der Mariannengraben, die tiefste Stelle des Meeres, liegt im Pazifik.</aside>
