Change heading and list

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <p>Der Pazifische Ozean, auch <em>Pazifik</em>, Stiller Ozean oder Großer Ozean genannt, ist der größte und tiefste Ozean der Erde und grenzt an alle anderen Ozeane.</p>
     <aside>Der Mariannengraben, die tiefste Stelle des Meeres, liegt im Pazifik.</aside>
    
-    <h3>Der indische Ozean</h3>
+    <h2>Der indische Ozean</h2>
     <p>Der Indische Ozean ist mit 74,9 Millionen km² Fläche (ca. 14,7 % der Erdoberfläche) der drittgrößte Ozean der Erde und ist mit Temperaturen von 22 °C bis 28 °C der wärmste Ozean der Erde.</p>
-    <ul>Einige Inseln im indischen Ozean sind unter anderem:
+    <p>Einige Inseln im indischen Ozean sind unter anderem:</p>
+    <ul>
         <li>Seychellen</li>
         <li>Malediven</li>
         <li>Sri Lanka</li>
